# ideas-tracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.db.yml  docker-compose.observability.yml  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pyrightconfig.json  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 5bab06b1afdd_init_schema.py  7260f8cfa797_init_schema.py  a2b3c4d5e6f7_seed_catalog.py
backend/scripts/: manage_user.py  seed.py  seed_dev.py
backend/src/: main.py
backend/src/app/adapters/inbound/rest/: auth_dependencies.py  rate_limiter.py
backend/src/app/adapters/outbound/observability/: business_metrics.py  logging_config.py  metrics.py  tracing.py
backend/src/app/adapters/outbound/security/: auth_context.py  jwt_service.py  password_hasher.py
backend/src/app/application/auth/: dto.py  errors.py  ports.py
backend/src/app/application/auth/use_cases/: login.py  refresh_token.py
backend/src/app/application/idea/: dto.py  errors.py  ports.py
backend/src/app/application/idea/services/: progress_log_policy.py
backend/src/app/application/security/: ports.py
backend/src/app/bootstrap/: container.py  settings.py
backend/tests/: conftest.py
backend/tests/bdd/: conftest.py
backend/tests/bdd/features/: auth.feature  ideas.feature
backend/tests/bdd/steps/: test_auth_steps.py  test_ideas_steps.py
backend/tests/integration/: test_auth_login_postgres.py
backend/tests/unit/: fakes.py  test_add_progress_log_use_case.py  test_auth_context.py  test_auth_router.py  test_create_idea_use_case.py  test_delete_idea_use_case.py  test_get_idea_detail_use_case.py  test_ideas_router.py  test_jwt_service.py  test_list_ideas_use_case.py  test_list_progress_logs_use_case.py  test_login_use_case.py  test_logs_router.py  test_password_hasher.py  test_progress_log_policy.py  test_rate_idea_use_case.py  test_ratings_router.py  test_refresh_use_case.py  test_role_guard.py  test_update_idea_use_case.py
frontend/: .dockerignore  (+4 more)
(+116 files in other folders)
